# docling

./: .gitignore  main.py  pyproject.toml
api/: routes.py
configurations/: config.py  queries.py
schema/: file.py
services/: db_service.py  docling_service.py  storage_service.py
